[package]
name = "asi-camera-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cross = "0.2.5"
libc = "0.2"
ringbuffer = "0.14.2"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.47"
image = "0.24.7"
num="0.4.1"
chrono="0.4.28"
[build-dependencies]
bindgen = "0.66.1"

