[package]
name = "libasi_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libasi_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.*", features = [ "extension-module" ] }
serde = "1.0.*"
toml = { version = "0.7.6", features = [ "parse" ] }
libasi-core= {path="../"}