[tool.poetry]
name = "libasi_py"
version = "0.1.0"
description = ""
authors = [ "momo <imoken1122@github.com>" ]

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
wheel = "*"
pytest = "^7.4"
maturin = "==1.2.0"